--- a/viewdata/src/App.css
+++ b/viewdata/src/App.css
@@ -20,3 +20,17 @@ td {
 th {
   background-color: #f2f2f2;
 }
+
+.custom-button {
+  background-color: #4477be;
+  border: none;
+  color: white;
+  padding: 8px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  cursor: pointer;
+  margin-left: 2px;
+  border-radius: 8px;
+}
